Add the entire JavaFX SDK